# GTestDocker_template

./: .gitignore  README
source/: hello.c  hello.h
source/world/: world.c  world.h
test/: RunTests.bat  RunTests.sh
test/gtestDocker/: Dockerfile  PreTest.sh  docker-compose.yml
test/test_set/: CMakeLists.txt  DoTest.sh
test/tests/: test_hello.cc
test/tests/world/: test_world.cc
